$Id: History,v 1.30 2001-08-28 05:36:41 asaim Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Aug 27 2001, M.Asai (event-V03-02-05)
- Convert NULL to 0 in G4EventManager.cc

Aug 17 2001, M.Asai (event-V03-02-04)
- G4EventManager.cc is debugged according to bug report 289.

July 19 2001, M.Asai (event-V03-02-03)
- Tagged 

July 19 2001, F.Lei 
- Most commands under G4ParticleGun class are now available under GPS

    e.g..
    /gun/position => /gps/position
    /gun/direction => /gps/direction
    /gun/energy  => /gps/energy
   ...

- Implemented co-ordinates rotation for angular distribution. User defined
co-ordinates was an option available to user in the messenger but not
implemented internally in the older version gps.
Source angular distribution coupled with positional distribution can lead to
rather strange combinations. To avoid this I used a simple scheme in this
implementation:

- For cos-law angular distribution the default maxtheta is set to pi/2.
    instead of pi. The user can of course re-set this to any number between
        0 - pi.

- Added user defined histogram re-set method. After re-set user can
      redefine all the histograms. To use
        /gps/resethist  'histname'