@@ -1,4 +1,4 @@
-$Id: History,v 1.30 2001-08-28 05:36:41 asaim Exp $
+$Id: History,v 1.31 2001-10-11 13:34:58 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,13 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Oct 11 2001, G.Cosmo (event-V03-02-06)
+- Replaced inclusions of ctoken.h with G4Tokenizer.hh in
+  G4GeneralParticleSourceMessenger.cc and G4ParticleGunMessenger.cc.
+  Removed comment on RW wrappers.
+- Co-works with tag "globals-V03-02-03" where the STLInterface
+  module has been removed.
 
 Aug 27 2001, M.Asai (event-V03-02-05)
 - Convert NULL to 0 in G4EventManager.cc
